samples/_failures_safe/1761354011_2ab301_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac1c7bbd.c: In function ‘main’:
./samples/SAFE/__tmp_ac1c7bbd.c:134:12: error: missing terminating " character
  134 |     printf("========================
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ac1c7bbd.c:134:5: error: expected expression at end of input
  134 |     printf("========================
      |     ^~~~~~
./samples/SAFE/__tmp_ac1c7bbd.c:134:5: error: expected declaration or statement at end of input
